--- a/book/Makefile
+++ b/book/Makefile
@@ -1,10 +1,10 @@
 BOOKDIR=.
 book: ${BOOKDIR}/*.tex drag-event-example-1.mps
-	cd ${BOOKDIR} && pdflatex -halt-on-error wheel.js.by.example.tex
+	cd ${BOOKDIR} && lualatex -halt-on-error wheel.js.by.example.tex
 
 
 drag-event-example-1.mps: ${BOOKDIR}/figures/drag-event-example.mp
-	cd ${BOOKDIR}/figures && mptopdf drag-event-example.mp
+	cd ${BOOKDIR}/figures && mpost drag-event-example.mp
 
 vfd1:
 	open ${BOOKDIR}/figures/drag-event-example-1.pdf
